--- a/sites/all/themes/gxnulib/sass/variables/_colors.scss
+++ b/sites/all/themes/gxnulib/sass/variables/_colors.scss
@@ -3,7 +3,8 @@ $black: #000000;
 
 $bgcolor: #f5f4f1;
 $font-color: #333333;
-$header-color: #e87411;
+//$header-color: #e87411;
+$header-color: #922525;
 $link-color: $header-color;
 $link-visited-color: $link-color;
 $link-hover-color: darken($link-color, 15%);
