--- a/sites/all/themes/gxnulib/sass/components/menus/_menu.scss
+++ b/sites/all/themes/gxnulib/sass/components/menus/_menu.scss
@@ -23,10 +23,10 @@
     .nav-collapse {
         .nav {
             > li {
-                padding-bottom: 0;
                 > a {
                     @include font-size(16px);
                     @extend %menu;
+                    padding: $spacing $vert-spacing-unit;
                     
                     &:hover,
                     &:focus {
@@ -105,7 +105,7 @@
 
         li {
             > a {
-                display: inline-block;
+                @include inline-block;
                 
                 &:hover,
                 &:focus {
